--- a/platformio.ini
+++ b/platformio.ini
@@ -30,3 +30,5 @@ build_flags =
     -D CFG_sx1276_radio=1
     -D LMIC_DEBUG_LEVEL=1
     -D LMIC_PRINTF_TO=Serial
+
+;upload_port = /dev/cu.wchusbserial146241
