update avec les différents type de vitibox

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,9 +19,10 @@ lib_deps = rgot-org/TTN_esp32@^0.1.2
            adafruit/DHT sensor library@^1.4.3
            paulstoffregen/OneWire@^2.3.6
            milesburton/DallasTemperature@^3.9.1
-           adafruit/DHT sensor library@^1.4.3
            olikraus/U8g2@^2.33.11
            adafruit/Adafruit BusIO@^1.11.6
+           ericksimoes/Ultrasonic@^3.0.0
+	        mike-gofton/ESP32PulseCounter@^0.2.0
  
 build_flags =
     -D ARDUINO_LMIC_PROJECT_CONFIG_H_SUPPRESS
