--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,4 @@
+; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
 ;   Upload options: custom upload port, speed and extra flags
@@ -15,14 +16,14 @@ platform = espressif32
 board = ttgo-lora32-v1
 framework = arduino
 monitor_speed = 115200
-lib_deps = rgot-org/TTN_esp32@^0.1.2
-           adafruit/DHT sensor library@^1.4.3
-           paulstoffregen/OneWire@^2.3.6
-           milesburton/DallasTemperature@^3.9.1
-           olikraus/U8g2@^2.33.11
-           adafruit/Adafruit BusIO@^1.11.6
-           ericksimoes/Ultrasonic@^3.0.0
-	        mike-gofton/ESP32PulseCounter@^0.2.0
+lib_deps = 	
+	rgot-org/TTN_esp32@^0.1.2
+	adafruit/DHT sensor library@^1.4.3
+	paulstoffregen/OneWire@^2.3.6
+	milesburton/DallasTemperature@^3.9.1
+	olikraus/U8g2@^2.33.11
+	adafruit/Adafruit BusIO@^1.11.6
+	ericksimoes/Ultrasonic@^3.0.0
  
 build_flags =
     -D ARDUINO_LMIC_PROJECT_CONFIG_H_SUPPRESS
